build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit/tests/TextUI/assertion.phpt.warn
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	<
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	variable '$_SERVER'
